update: add Thermography labs

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ AMaRvCH/4\. týden/MPCeXpert_nabídka_č103563\.pdf
 AMaRvCH/4\. týden/nabídka\.docx
 
 *.ravi
+
+PMR/fuzzy/a course in fuzzy systems and control_part 1 \(1\)\.pdf
